字体问题解决

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h3>Vuex</h3>
             <div>官网：<a href="https://vuex.vuejs.org/">https://vuex.vuejs.org/</a></div>
             <div>专为 Vue.js 应用程序开发的状态管理模式 + 库。它采用集中式存储管理应用的所有组件的状态，并以相应的规则保证状态以一种可预测的方式发生变化。</div>
-            <div>Pinia</div>
+            <h3>Pinia</h3>
             <div>官网：<a href="https://pinia.vuejs.org/">https://pinia.vuejs.org/</a></div>
             <div>Pinia更适合在新项目使用，但是维修旧项目时不乏使用Vuex的情况。二者区别不太大，很容易上手另一个。</div>
         </section>
