--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
         </section>
         <section>
             <h3>Vue Router</h3>
-            <div>官网：<a href="https://router.vuejs.org/">https://router.vuejs.org/</a> </div>
+            <div>官网：<a href="https://router.vuejs.org/" target="_blank">https://router.vuejs.org/</a> </div>
             <div>Vue.js的官方路由，便于使用Vue.js构建单页应用</div>
         </section>
         <section>
             <h3>Vuex</h3>
-            <div>官网：<a href="https://vuex.vuejs.org/">https://vuex.vuejs.org/</a></div>
+            <div>官网：<a href="https://vuex.vuejs.org/" target="_blank">https://vuex.vuejs.org/</a></div>
             <div>专为 Vue.js 应用程序开发的状态管理模式 + 库。它采用集中式存储管理应用的所有组件的状态，并以相应的规则保证状态以一种可预测的方式发生变化。</div>
             <h3>Pinia</h3>
-            <div>官网：<a href="https://pinia.vuejs.org/">https://pinia.vuejs.org/</a></div>
+            <div>官网：<a href="https://pinia.vuejs.org/" target="_blank">https://pinia.vuejs.org/</a></div>
             <div>Pinia更适合在新项目使用，但是维修旧项目时不乏使用Vuex的情况。二者区别不太大，很容易上手另一个。</div>
         </section>
         <section>
             <h3>Nuxt</h3>
-            <div>官网：<a href="https://nuxt.com/">https://nuxt.com/</a></div>
+            <div>官网：<a href="https://nuxt.com/" target="_blank">https://nuxt.com/</a></div>
             <div>Nuxt 是一个免费的开源框架，它提供了一种直观且可扩展的方式来创建类型安全、高性能和生产级的全栈 Web 应用程序和网站，并结合了Vue.js。</div>
         </section>
     </section>
